--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  
 
 </head>
 <body>
@@ -20,15 +21,26 @@
     <div class="card">
 
       <div class="card_content">
-
-        <img src="images/image-equilibrium.jpg" class="product__image">
+        <div class="image">
+          <img src="images/image-equilibrium.jpg" class="product__image">
+          <div>
+            <img src="images/icon-view.svg" class="view__image">
+          </div>
+        </div>
+        
         <h2 class="title">Equilibrium #3429</h2>
 
         <p>Our Equilibrium collection promotes balance and calm.</p>
 
         <div class="flex-group__price">
-          <p class="product__price" data-icon="ethereum">0.041 ETH</p>
-          <p class="time" data-icon="clock">3 days left</p>
+          <div class="product__price">
+            <img src="images/icon-ethereum.svg">
+            0.041 ETH
+          </div>
+          <div class="time">
+            <img src="images/icon-clock.svg">
+            3 days left
+          </div>
         </div>
 
         <div class="flex-group__creator">
