--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
       <div class="card_content">
         <div class="image">
-          <img src="images/image-equilibrium.jpg" class="product__image">
+          <img src="images/image-equilibrium.jpg" alt="" class="product__image">
           <div>
-            <img src="images/icon-view.svg" class="view__image">
+            <img src="images/icon-view.svg" alt="" class="view__image">
           </div>
         </div>
         
@@ -34,17 +34,17 @@
 
         <div class="flex-group__price">
           <div class="product__price">
-            <img src="images/icon-ethereum.svg">
+            <img src="images/icon-ethereum.svg" alt="">
             0.041 ETH
           </div>
           <div class="time">
-            <img src="images/icon-clock.svg">
+            <img src="images/icon-clock.svg" alt="">
             3 days left
           </div>
         </div>
 
         <div class="flex-group__creator">
-          <img src="images/image-avatar.png" class="creator__image">
+          <img src="images/image-avatar.png" alt="" class="creator__image">
           <p class="creator__message">Creation of <span class="creator__name">Jules Wyvern</span></p>
         </div>
         
